fixed header spacing

--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -1,7 +1,8 @@
 .contentTitle {
   font-weight: 500;
   font-size: 1.5rem;
-  margin-top: 0.5rem;
+  margin-top: 1rem;
+  margin-bottom: 0.25rem;
 }
 
 .contentText {
