--- a/src/components/TwoColumns/TwoColumns.module.css
+++ b/src/components/TwoColumns/TwoColumns.module.css
@@ -11,3 +11,7 @@
 .rightColumn {
 	min-width: 300px;
 }
+
+.title{
+	margin-bottom: 0%;
+}
